basic resume html

--- a/resume.html
+++ b/resume.html
@@ -1,1 +1,13 @@
-Madira Sai Rishitha 
+<!-- Madira Sai Rishitha  -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Madira Sai Rishitha</h1>
+    <hr>
+</body>
+</html>
